--- a/WebApplication1/Project_Marina.csproj
+++ b/WebApplication1/Project_Marina.csproj
@@ -74,6 +74,7 @@
     <Content Include="images\inlandmarina_banner.jpg" />
     <Content Include="images\poweredbyaspnet.gif" />
     <Content Include="LeaseSlipPage.aspx" />
+    <Content Include="marina.css" />
     <Content Include="Registration_page.aspx" />
     <Content Include="Web.config" />
     <Content Include="HomePage.aspx" />
