--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -12,6 +12,8 @@
       providerName="System.Data.SqlClient" />
     <add name="MarinaConnectionString3" connectionString="Data Source=DESKTOP-B52KRSQ;Initial Catalog=Marina;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="MarinaConnectionString4" connectionString="Data Source=DESKTOP-B52KRSQ;Initial Catalog=Marina;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
