--- a/WebApplication1/Project_Marina.csproj
+++ b/WebApplication1/Project_Marina.csproj
@@ -73,6 +73,7 @@
     <Content Include="images\boat1.jpg" />
     <Content Include="images\boat2.jpg" />
     <Content Include="images\boat3.jpg" />
+    <Content Include="images\cvm_marina_map.png" />
     <Content Include="images\inlandmarina_banner.jpg" />
     <Content Include="images\poweredbyaspnet.gif" />
     <Content Include="LeaseSlipPage.aspx" />
