--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -35,5 +35,8 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"></add>
+  </appSettings>
 
 </configuration>
