--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -20,6 +20,8 @@
       providerName="System.Data.SqlClient" />
     <add name="MarinaConnectionString7" connectionString="Data Source=SoftDev;Initial Catalog=Marina;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="MarinaConnectionString8" connectionString="Data Source=SoftDev;Initial Catalog=Marina;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
