--- a/WebApplication1/Project_Marina.csproj
+++ b/WebApplication1/Project_Marina.csproj
@@ -86,6 +86,7 @@
     <Content Include="Login.aspx" />
     <Content Include="marina.css" />
     <Content Include="Registration.aspx" />
+    <None Include="Properties\PublishProfiles\ProjectMarina20190528020202 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
